# esp32-zigbee-gtw

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  deploy.sh  partitions.csv  sdkconfig.defaults
.github/workflows/: build.yml
components/esp_zigbee_host/include/: esp_zigbee_core.h  esp_zigbee_type.h
components/esp_zigbee_host/include/zcl/: esp_zigbee_zcl_command.h
components/esp_zigbee_host/include/zdo/: esp_zigbee_zdo_command.h
components/esp_zigbee_host/src/: esp_host_frame.c  esp_host_main.c  esp_host_zb.c
components/esp_zigbee_host/src/priv/: esp_host_bus.h  esp_host_zb.h
components/esp_zigbee_host/src/zdo/: esp_zigbee_zdo_command.c
components/lua/src/: linit.c
docs/: README.md
gateway/: CLAUDE.md
gateway/components/esp_zigbee_host/include/zcl/: esp_zigbee_zcl_common.h
gateway/components/esp_zigbee_host/src/: esp_host_bus.c  esp_host_frame.c  esp_host_main.c  esp_zigbee_core.c  slip.c
gateway/components/esp_zigbee_host/src/priv/: esp_host_main.h
gateway/components/esp_zigbee_host/src/zcl/: esp_zigbee_zcl_command.c
gateway/components/lua/: CMakeLists.txt
gateway/main/: automation.h  device_defs.c  device_defs.h  device_list.h  idf_component.yml  lua_api.c  main.c  web_server.c  wifi.c
gateway/main/web/: index.html
gateway/spiffs_data/: devices.json
main/: CMakeLists.txt  Kconfig.projbuild  automation.c  device_defs.c  device_defs.h  device_list.c  device_list.h  dns_server.c  dns_server.h  idf_component.yml  lua_api.h  main.c  web_server.c  wifi.c  wifi.h  ws_server.c  ws_server.h  zigbee.c  zigbee.h
main/web/: index.html
ncp/: CLAUDE.md  sdkconfig.defaults
ncp/components/esp-zigbee-ncp/src/: esp_ncp_bus.c  esp_ncp_frame.c  esp_ncp_main.c  esp_ncp_zb.c  slip.c
ncp/components/esp-zigbee-ncp/src/priv/: esp_ncp_main.h  esp_ncp_zb.h
ncp/main/: esp_zigbee_ncp.c
web-flasher/: index.html
